Styling, no top/bottom padding for body to prevent vert scrollbar

--- a/theme/formhistorycontrol-generic.css
+++ b/theme/formhistorycontrol-generic.css
@@ -11,7 +11,7 @@ html {
 body {
     background: #f0f0f0;
     margin: 0 auto;
-    padding: 2px;
+    padding: 0 2px;
     height: inherit;
     cursor: default;
 }
